# thesis

./: .gitignore  Dockerfile  Makefile  README.md  abstract-en.tex  abstract-fr.tex  acknowledgments.tex  action.yml  art.tex  chapter_appendix.tex  chapter_conclusion.tex  chapter_experiment.tex  chapter_introduction.tex  chapter_prediction.tex  defense_setup.org  draw_evolution_plots.R  entrypoint.sh  epigraph.tex  figures.org  index.md  macros.include.default.tex  macros.local.tex  pyproject.toml  references.bib  shell.nix  slides.tex  speech.org  thesis.tex  titlepage.tex  uga.sty  watermark.tex
.github/actions/compilation/: action.yml  entrypoint.sh
.github/workflows/: main.yml  remove-old-artifacts.yml
data/appendix/carbon/: lille.csv  luxembourg.csv  lyon.csv  nantes.csv  sophia.csv
data/conclusion/: hpl_matrix_size.csv
data/context/: microprocessor_chronology.csv  transistor_count.csv
data/experiment/bit-flips/: generation_method_freq.csv  generation_method_perf.csv  mask_size_freq.csv  mask_size_perf.csv
data/experiment/experimental_conditions/: communication_computation_interference.csv
data/experiment/randomizing_sizes/: dgemm_raw_data.csv
figures_ipynb/: g5k_test.ipynb  g5k_test_slides.ipynb  pycewise.ipynb  pycewise_log.ipynb
img/experiment/engine/: mweExeco.py  mwePeanut.py  mwePeanut_simple.py  pyproject.toml
img/prediction/emulating/: HPL_dgemm_macro_simple.c
img/prediction/state_of_art/: aspen.c  hpl_panel_init.c  hpl_panel_typedef.c  sst1.c  sst1.f  sst2.c  sst2.f
sty/: cleanthesis.sty  uga.sty
tools/: check_uncited_references.bash
(+36 files in other folders)
