[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
peanut = {git = "https://github.com/Ezibenroc/peanut.git", rev = "a0d49731586d98038a16aad05d1245cb5d3b7f44"}
execo = "^2.6.4"
ipython = "^7.19.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
