[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["Tom Cornebize <tom.cornebize@univ-grenoble-alpes.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
peanut = {git = "https://github.com/Ezibenroc/peanut.git", rev = "a0d49731586d98038a16aad05d1245cb5d3b7f44"}
execo = "^2.6.4"
ipython = "^7.19.0"
requests = "^2.24.0"
apache-libcloud = "^3.2.0"
cryptography = "^3.2.1"
paramiko = "^2.7.2"
pyyaml = "^5.3.1"
coloredlogs = "^14.0"
tenacity = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
